--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=18.x"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "register": "node commands.js",
     "dev": "nodemon app.js"
   },
@@ -21,6 +21,6 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
+    "nodemon": "^3.1.9"
   }
 }
